[gd_scene load_steps=6 format=2]

[ext_resource path="res://Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/title_scene/TitleScene.gd" type="Script" id=2]
[ext_resource path="res://assets/background/background1.png" type="Texture" id=3]
[ext_resource path="res://src/title_scene/TitleScreenButton.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[node name="TitleScene" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -1.0
margin_top = -1.0
margin_right = 1918.0
margin_bottom = 1082.0
texture = ExtResource( 3 )
stretch_mode = 1

[node name="Title" type="Label" parent="."]
margin_left = 450.0
margin_top = 239.0
margin_right = 1526.0
margin_bottom = 482.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Worsd Agaisnt Zombies"

[node name="NewGame" parent="." instance=ExtResource( 4 )]
margin_left = 119.0
margin_top = 559.0
margin_right = 495.0
margin_bottom = 654.0
text = "New Game"

[node name="Settings" parent="." instance=ExtResource( 4 )]
margin_left = 123.0
margin_top = 745.0
margin_right = 419.0
margin_bottom = 840.0
text = "Settings"

[node name="Quit" parent="." instance=ExtResource( 4 )]
margin_left = 115.0
margin_top = 904.0
margin_right = 268.0
margin_bottom = 999.0
text = "Quit"

[connection signal="mouse_entered" from="NewGame" to="." method="_on_Button_Hovered"]
[connection signal="mouse_exited" from="NewGame" to="." method="_on_Button_Unhovered"]
[connection signal="pressed" from="NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="mouse_entered" from="Settings" to="." method="_on_Button_Hovered"]
[connection signal="mouse_exited" from="Settings" to="." method="_on_Button_Unhovered"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_Button_Hovered"]
[connection signal="mouse_exited" from="Quit" to="." method="_on_Button_Unhovered"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
